kubernetes/apps/homepage/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  selector:
    app: homepage
  ports:
    - port: 3000
      targetPort: http
      name: http
