kubernetes/apps/homepage/homepage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  labels:
    homelab.mpdavis.com/exposure: tailnet
spec:
  entryPoints:
    - tailnet
  routes:
    - match: Host(`home.${DOMAIN}`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
  tls: {}
